# frame

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: sample-exploration.md
evals/: golden_ideas.json  test_full_pipeline.py
frame/: __init__.py  cli.py  config.py  entry_points.py  state.py  supervisor.py
frame/observability/: __init__.py  langfuse_setup.py  tracing.py
frame/preprocessing/: __init__.py  clustering.py  embedding.py  evidence_ingestion.py
frame/prompts/: critic.md  definer.md  explorer.md  ideator.md  prioritizer.md  supervisor.md  synthesizer.md
frame/schemas/: __init__.py  critique.py  evidence.py  exploration.py  package.py  problem.py  solution.py  state.py
frame/subagents/: __init__.py  base.py  critic.py  definer.py  explorer.py  ideator.py  prioritizer.py  synthesizer.py
frame/tools/: __init__.py  gates.py  vault.py
mcp_servers/: __init__.py
mcp_servers/critic_mcp/: server.py
mcp_servers/definer_mcp/: server.py
mcp_servers/explorer_mcp/: server.py  tools.py
mcp_servers/ideator_mcp/: server.py
mcp_servers/obsidian_mcp/: server.py
mcp_servers/prioritizer_mcp/: server.py
mcp_servers/synthesizer_mcp/: server.py
tests/: test_explorer.py  test_preprocessing.py  test_state.py  test_subagents.py  test_tools.py
